python def .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,27 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-env/
+docs/py-docstring-parser/
+docs/site/
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
+MANIFEST
+
+.ipynb_checkpoints
+
+*.sqlite
+gmon.out
+__pycache__
+*.pyc
+*.o
+*.so
+*.gcno
+*.swp
+*.egg-info
 *.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
+*~
+build
+dist
+lib/test
+doc/_build
+*env
+*ENV
+.DS_store
+.idea
