--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -13,6 +13,7 @@ markdown_extensions:
   - extra
   - tables
   - fenced_code
+  - mathjax
 extra_javascript:
   - https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML
   - mathjaxhelper.js
