Updated doc for 0.1.5.dev and added test data to setup.py

--- a/.landscape.yaml
+++ b/.landscape.yaml
@@ -1,5 +1,11 @@
 doc-warnings: yes
 
-ignore-patterns:
-  - __init__.py
+ignore-paths:
+    - docs
+    - biopandas/testutils
 
+ignore-patterns:
+    - ^example/doc_.*\.py$
+    - (^|/)docs(/|$)
+    - __init__.py
+    - engines.py
