--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -24,15 +24,17 @@ extra_javascript:
 extra_css:
   - extra.css
 
-copyright: Copyright &copy; 2015-2016 <a href="http://sebastianraschka.com">Sebastian Raschka</a>
+copyright: Copyright &copy; 2015-2017 <a href="http://sebastianraschka.com">Sebastian Raschka</a>
 google_analytics: ['UA-38457794-3', 'rasbt.github.io/biopandas']
 
 pages:
 - Home: index.md
 - Tutorials:
   - tutorials/Working_with_PDB_Structures_in_DataFrames.md
+  - tutorials/Working_with_MOL2_Structures_in_DataFrames.md
 - API:
   - api_subpackages/biopandas.pdb.md
+  - api_subpackages/biopandas.mol2.md
 - Changelog: changelog.md
 - Installation: installation.md
 - Contributing: contributing.md
