--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,6 +16,7 @@ install:
   - conda info -a
   - conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy pandas nose
   - activate test-environment
+  - pip install python-mmtf
 
 test_script:
   - nosetests -s -v
