--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,7 +14,7 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
-  - conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy pandas nose
+  - conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy pandas nose requests
   - activate test-environment
 
 test_script:
