Add automated pytest runs for github actions workflow

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,7 +8,27 @@ on:
     tags:
       - "v*"
 jobs:
+  test-pytest:
+    name: Run pytest tests
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
+        cache: 'pip'
+
+    - name: Install package dependencies for testing
+      run: pip install .[test]
+
+    - name: Run all the pytest tests
+      run: pytest ./biopandas -sv
+
   build-n-publish:
+    needs: test-pytest # only runs if tests are passing
     name: Build and publish to PyPI
     runs-on: ubuntu-latest
 
@@ -41,7 +61,7 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: ${{ github.ref }}
           draft: false
-          prerelease: false
+          prerelease: true
 
       - name: Get Asset name
         run: |
