Add automated flake8 action

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,6 +8,25 @@ on:
     tags:
       - "v*"
 jobs:
+  test-style:
+    name: Run style tests
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
+        cache: 'pip'
+
+    - name: Install package dependencies for testing
+      run: pip install [test]
+
+    - name: Run all the pytest tests
+      run: flake8 ./biopandas
+
   test-pytest:
     name: Run pytest tests
     runs-on: ubuntu-latest
