--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,8 +14,8 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
-  - conda create -q -n test-environment --channel=conda-forge mmtf-python numpy scipy pandas nose looseversion python=%PYTHON_VERSION%
+  - conda create -q -n test-environment --channel=conda-forge mmtf-python numpy scipy pandas pytest looseversion python=%PYTHON_VERSION%
   - activate test-environment
 
 test_script:
-  - nosetests -s -v
+  - pytest -s -v
