include testing on newer python versions

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,6 +4,15 @@ environment:
   matrix:
     - PYTHON_VERSION: 3.7
       MINICONDA: C:\Miniconda3
+    - PYTHON_VERSION: 3.8
+      MINICONDA: C:\Miniconda3
+    - PYTHON_VERSION: 3.9
+      MINICONDA: C:\Miniconda3
+    - PYTHON_VERSION: "3.10"
+      MINICONDA: C:\Miniconda3
+    - PYTHON_VERSION: 3.11
+      MINICONDA: C:\Miniconda3
+
 
 init:
   - ECHO %PYTHON_VERSION% %MINICONDA%
